@@ -3,7 +3,7 @@
   <module>
     <title>core</title>
     <properName>phpWebSite Core</properName>
-    <version>1.5.0</version>
+    <version>1.9.0</version>
     <url>http://phpwebsite.appstate.edu/downloads/modules/base/</url>
   </module>
   <module>
