@@ -1,75 +1,0 @@
-[add_to_title]
-title = "Add Wiki Page Title to Site Title";
-content = "Enabling this setting will add the current wiki page title to the site title which appears in the browser title bar.  The site title is sometimes used in themes meaning this setting would add the wiki page title to the theme as well.";
-
-[admin_email]
-title = "Wiki Administrator Email";
-content = "Enter in the email address of the Wiki administrator.  If this field is left blank or has an invalid email address, then the change will be ignored.";
-
-[allow_anon_view]
-title = "Allow Anonymous Viewing";
-content = "Enabling this setting will allow all visitors to view the wiki.  When disabled, only registered users can view the wiki.";
-
-[allow_bbcode]
-title = "BBCode Parser";
-content = "When enabled, the page text will also be parsed by the BBCode parser instead of just the Text_Wiki parser. Keep in mind that everything you can do with BBCode can be done with wikitax.";
-
-[allow_image_upload]
-title = "Allow Image Uploads";
-content = "Enabling this setting will allow all registered users to upload images.  When disabled, only registered users with admin privileges can upload images.  Anonymous visitors can never upload images.";
-
-[allow_page_edit]
-title = "Allow Page Edits";
-content = "Enabling this setting will allow all registered users to edit pages.  When disabled, only registered users with admin privileges can edit pages. Anonymous visitors can never edit pages.";
-
-[default_page]
-title = "Default Page";
-content = "The default page to display when no instructions are passed to the Wiki module.";
-
-[diff]
-title = "Compare To";
-content = "Here is where you can see what has changed between different versions of a page.<br /><br /><b>Compare To Current</b><br /> Selecting one of the Current links will show you what text has been changed between the corresponding page and the current version.<br /><br /><b>Compare To Previous</b><br />Selecting one of the Previous links will show you what text has been changed between the corresponding page and the next oldest version.";
-
-[diff_type]
-title = "Use single column diff";
-content = "By default, when comparing two page revisions, the changes will be presented in a two column format.  On fixed width layouts this could cause excessive horizontal scrolling.  Setting this option will change the comparison to a single column format.";
-
-[discussion]
-title = "Discussion";
-content = "Allow vistors to comment on individual pages.  This feature can be enabled for registered users only or for everyone who visits this site.<br /><br />Note: If you enable anonymous discussion, registered users discussion will automatically be enabled when you save the settings.";
-
-[email_text]
-title = "Notification Email Text";
-content = "This is the body text of the email sent when wiki pages are edited.  HTML will be stripped out as the email will be sent as Plain Text.  You can use variables [page] and [url] to represent the name of the wiki page and the url to view the page, respectively.";
-
-[ext_chars_support]
-title = "Extended Character Set";
-content = "When enabled, the extended character set will be supported for wiki page names.  For example, German umlauts would be allowed in a wiki page name.";
-
-[ext_page_target]
-title = "Target for External Links";
-content = "This controls where external pages will appear. _blank opens the new page in a new window. _parent is used in the situation where a frameset file is nested inside another frameset file.  A link in one of the inner frameset documents which uses _parent will load the new page where the inner frameset file had been.  If the current page's frameset file does not have any parent, then _parent works exactly like _top - the new document is loaded in the full window.  _self puts the new page in the same window and frame as the current page.";
-
-[format_title]
-title = "Format Wiki Page Title";
-content = "Enabling this setting will format the current wiki page title before being displayed anywhere (excluding the wiki page text) by the module.  The page title in the page text will have to be formatted manually if you do not like the standard WordsSmashedTogether default. The automatic formatting by the module will add spaces to the WikiPageTitle, making it Wiki Page Title. <br /><br />Remember, you will still have to refer to the page as WikiPageTitle in the page text, but you can change its appearance by using [WikiPageTitle Your Formatted Title Here].<br /><br />If this is confusing to you or others, it is recommended to not use this feature.";
-
-[menu_items]
-title = "Menu Items";
-content = "These settings allow you to change the look of the menu on each wiki page.  It is important to note that these settings merely hide the links, but do not prevent a visitor from accessing the target page if they know the direct URL.";
-
-[monitor_edits]
-title = "Monitor Edits";
-content = "Enabling this setting will email a notification to the Wiki Administrator email address on every page edit.";
-
-[orphaned_pages]
-title = "Orphaned Pages";
-content = "An orphaned page is a page no other page links to.";
-
-[show_on_home]
-title = "Show on Home Page";
-content = "Enabling this setting will show the default wiki page on the home page of the web site.";
-
-[show_modified_info]
-title = "Show Page Modified Info";
-content = "Enabling this setting will show the <b>Last modified by</b> information on each wiki page. However, if UPDATED_INFO tag is not in the view template, the information will never show up, regardless of how this option is set.";
